--- a/scss/_download.scss
+++ b/scss/_download.scss
@@ -17,4 +17,7 @@ section.download {
             display: none;
         }
     }
+    .no-split {
+        white-space: nowrap;
+    }
 }
